// SPDX-License-Identifier: AGPL-3.0-only

syntax = "proto3";

package errorpb;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "errorpb";
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

message PushErrorDetails {
  ErrorType ErrorType = 1;
  repeated OptionalFlag OptionalFlags = 3;
}

enum ErrorType {
  INGESTION_RATE_LIMIT_ERROR = 0;
  REQUEST_RATE_LIMIT_ERROR = 1;
  INSTANCE_LIMIT_ERROR = 2;
  TENANT_LIMIT_ERROR = 3;
  DATA_ERROR = 4;
}

enum OptionalFlag {
    SERVICE_OVERLOAD_STATUS_ON_RATE_LIMIT_ENABLED = 0;
}

